# libcore

./: .clang-format  .clang-tidy  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
cmake/: CheckToNumericFP.cmake  EduceLabCoreConfig.cmake.in  InstallProject.cmake
docs/: CMakeLists.txt  index.md  modules.dox
examples/: CMakeLists.txt  CachingExample.cpp  ImageExample.cpp  IterationExample.cpp  MatExample.cpp  SignalsExample.cpp  StringExample.cpp  UuidExample.cpp  VecExample.cpp
include/educelab/: core.hpp
include/educelab/core/: Version.hpp
include/educelab/core/io/: ImageIO.hpp
include/educelab/core/types/: Color.hpp  Image.hpp  Mat.hpp  Mesh.hpp  Signals.hpp  Uuid.hpp  Vec.hpp
include/educelab/core/utils/: Caching.hpp  Filesystem.hpp  Iteration.hpp  LinearAlgebra.hpp  Math.hpp  String.hpp
src/: Image.cpp  ImageIO.cpp  Uuid.cpp  Version.cpp.in
tests/: CMakeLists.txt
tests/src/: TestCaching.cpp  TestColor.cpp  TestFilesystem.cpp  TestImage.cpp  TestIteration.cpp  TestLinearAlgebra.cpp  TestMat.cpp  TestMath.cpp  TestMesh.cpp  TestSignals.cpp  TestString.cpp  TestUuid.cpp  TestVec.cpp  TestVersion.cpp
