add_executable(educelab_core_VecExample VecExample.cpp)
target_link_libraries(educelab_core_VecExample educelab::core)

add_executable(educelab_core_IterationExample IterationExample.cpp)
target_link_libraries(educelab_core_IterationExample educelab::core)

add_executable(educelab_core_StringExample StringExample.cpp)
target_link_libraries(educelab_core_StringExample educelab::core)