add_executable(educelab_core_IterationExample IterationExample.cpp)
target_link_libraries(educelab_core_IterationExample educelab::core)

add_executable(educelab_core_SignalsExample SignalsExample.cpp)
target_link_libraries(educelab_core_SignalsExample educelab::core)

add_executable(educelab_core_StringExample StringExample.cpp)
target_link_libraries(educelab_core_StringExample educelab::core)

add_executable(educelab_core_UuidExample UuidExample.cpp)
target_link_libraries(educelab_core_UuidExample educelab::core)

add_executable(educelab_core_VecExample VecExample.cpp)
target_link_libraries(educelab_core_VecExample educelab::core)

add_executable(educelab_core_ImageExample ImageExample.cpp)
target_link_libraries(educelab_core_ImageExample educelab::core)

add_executable(educelab_core_MatExample MatExample.cpp)
target_link_libraries(educelab_core_MatExample educelab::core)

add_executable(educelab_core_CachingExample CachingExample.cpp)
target_link_libraries(educelab_core_CachingExample educelab::core)